# ModelRenderer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ModelRenderer.cpp  ModelRenderer.h  Shader.cpp  Shader.h  main.cpp
shaders/: cube.fs  cube.vs  fragment.shader  lightCube.fs  lightCube.vs  vertex.shader
